RESOLVED FIXED 284617
[iOS] Do not set a microphone as preferred if getUserMedia is not asking for a specific device
https://bugs.webkit.org/show_bug.cgi?id=284617
Summary [iOS] Do not set a microphone as preferred if getUserMedia is not asking for ...
youenn fablet
Reported 2024-12-13 01:52:42 PST
[iOS] Do not set a microphone as preferred if getUserMedia is not asking for a specific device
Attachments
youenn fablet
Comment 1 2024-12-13 01:53:08 PST
EWS
Comment 2 2024-12-14 00:46:36 PST
Committed 287834@main (8bc8b76f6373): <https://commits.webkit.org/287834@main> Reviewed commits have been landed. Closing PR #37898 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.