Source/WebCore/platform/mediastream/ios/CoreAudioCaptureSourceIOS.h
@@ -40,8 +40,6 @@ public:
     ~CoreAudioCaptureSourceFactoryIOS();
 
 private:
-    CaptureSourceOrError createAudioCaptureSource(const CaptureDevice&, MediaDeviceHashSalts&&, const MediaConstraints*, std::optional<PageIdentifier>) final;
-
     RetainPtr<WebCoreAudioCaptureSourceIOSListener> m_listener;
 };
 
